chore: Done formatting the menu card

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -121,26 +121,59 @@ li {
 }
 
 .menu__container {
-  border: 1px solid red;
   width: 60%;
 }
 
 .card__container {
   display: flex;
+  gap: 48px;
 }
 
 .price__container {
   display: flex;
+  flex-direction: column;
+  gap: 18px;
 }
 
 .price__container-1, .price__container-2 {
   display: flex;
+  gap: 24px;
+  align-items: center;
+}
+
+.card__price-1, .card__price-2 {
+  font-size: var(--size-lg);
+}
+
+.card__price-info-1, .card__price-info-2 {
+  padding: 4px 32px;
+  border-radius: 22px;
+  border: solid 1.5px #efefef;
+  width: 148px;
+  text-align: center; 
 }
 
 .card__title {
   font-size: var(--size-2xl);
 }
 
-.card__description {
-  width: 350px;
+.card__description {  
+  width: 300px;
+}
+
+.text__container {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.text__content-container {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+/* All Menu Parent Container */
+.all__menu-container {
+  display: flex;
 }
